--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-slideshow-image": "^4.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
